// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/delete_post_modal should match snapshot for delete_post_modal with 0 comments 1`] = `
<Modal
  animation={true}
  aria-labelledby="deletePostModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="deletePostModal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onEntered={[Function]}
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="deletePostModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="Confirm Post Delete"
        id="delete_post.confirm_post"
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <MemoizedFormattedMessage
      defaultMessage="Are you sure you want to delete this message?"
      id="delete_post.question_post"
      tagName="p"
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-tertiary"
      onClick={[Function]}
      type="button"
    >
      <MemoizedFormattedMessage
        defaultMessage="Cancel"
        id="delete_post.cancel"
      />
    </button>
    <button
      autoFocus={true}
      className="btn btn-danger"
      id="deletePostModalButton"
      onClick={[Function]}
      type="button"
    >
      <MemoizedFormattedMessage
        defaultMessage="Delete"
        id="delete_post.del"
      />
    </button>
  </ModalFooter>
</Modal>
`;

exports[`components/delete_post_modal should match snapshot for delete_post_modal with 1 comment 1`] = `
<Modal
  animation={true}
  aria-labelledby="deletePostModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="deletePostModal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onEntered={[Function]}
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="deletePostModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="Confirm Post Delete"
        id="delete_post.confirm_post"
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <MemoizedFormattedMessage
      defaultMessage="Are you sure you want to delete this message?"
      id="delete_post.question_post"
      tagName="p"
    />
    <MemoizedFormattedMessage
      defaultMessage="This message has {count, number} {count, plural, one {comment} other {comments}} on it."
      id="delete_post.warning"
      tagName="p"
      values={
        Object {
          "count": 1,
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-tertiary"
      onClick={[Function]}
      type="button"
    >
      <MemoizedFormattedMessage
        defaultMessage="Cancel"
        id="delete_post.cancel"
      />
    </button>
    <button
      autoFocus={true}
      className="btn btn-danger"
      id="deletePostModalButton"
      onClick={[Function]}
      type="button"
    >
      <MemoizedFormattedMessage
        defaultMessage="Delete"
        id="delete_post.del"
      />
    </button>
  </ModalFooter>
</Modal>
`;

exports[`components/delete_post_modal should match snapshot for post with 1 commentCount and is not rootPost 1`] = `
<Modal
  animation={true}
  aria-labelledby="deletePostModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="deletePostModal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onEntered={[Function]}
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="deletePostModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="Confirm Comment Delete"
        id="delete_post.confirm_comment"
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <MemoizedFormattedMessage
      defaultMessage="Are you sure you want to delete this comment?"
      id="delete_post.question_comment"
      tagName="p"
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-tertiary"
      onClick={[Function]}
      type="button"
    >
      <MemoizedFormattedMessage
        defaultMessage="Cancel"
        id="delete_post.cancel"
      />
    </button>
    <button
      autoFocus={true}
      className="btn btn-danger"
      id="deletePostModalButton"
      onClick={[Function]}
      type="button"
    >
      <MemoizedFormattedMessage
        defaultMessage="Delete"
        id="delete_post.del"
      />
    </button>
  </ModalFooter>
</Modal>
`;
